force-app/main/default/objects/C360_Metric_Definition__mdt/C360_Metric_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Pilot metric definitions and dummy values for configurable KPI tiles (Phase 1).</description>
    <label>C360 Metric Definition</label>
    <pluralLabel>C360 Metric Definitions</pluralLabel>
</CustomObject>