force-app/main/default/objects/C360_Metric_Definition__mdt/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attention Variant</label>
    <type>Checkbox</type>
</CustomField>