force-app/main/default/objects/C360_Metric_Definition__mdt/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Tile Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>