force-app/main/default/objects/C360_Metric_Definition__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Tile Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>