force-app/main/default/objects/C360_Metric_Definition__mdt/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <externalId>true</externalId>
    <label>Metric Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>